--- a/css/style.css
+++ b/css/style.css
@@ -124,3 +124,64 @@ h4 {
 	color: white;
 	margin-right: 5px;
 }
+
+.socials {
+    display: flex;
+    
+    width: 330px;
+    list-style: none;
+
+    margin: 20px 0 50px 1200px;
+}
+
+.socials-item {
+    width: 47px;
+    height: 47px;
+    
+    margin-left: 47px;
+}
+
+.socials-item:first-child {
+    margin-left: 0;
+}
+
+.social-link {
+    display: block;
+    
+    width: 100%;
+    height: 100%;
+    text-indent: -9999999px;
+    background: url(../assets/socials.png)
+}
+
+.vk {
+    background-position: -8px -10px;
+}
+
+.vk:hover {
+    background-position: -8px -69px;
+}
+
+.tw {
+    background-position: -79px -10px;
+}
+
+.tw:hover {
+    background-position: -79px -69px;
+}
+
+.fb {
+    background-position: -150px -10px;
+}
+
+.fb:hover {
+    background-position: -150px -69px;
+}
+
+.gt {
+    background-position: -221px -10px;
+}
+
+.gt:hover {
+    background-position: -221px -69px;
+}
